tests/snapshots/run_wpt_conformance__onnx_expand_float16_3D_tensor_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "expand.https.any.js",
    "expand float16 3D tensor to 4D",
    "onnx",
    "PASS",
)
