tests/snapshots/run_wpt_conformance__onnx_expand_float32_0D_scalar_to_5D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "expand.https.any.js",
    "expand float32 0D scalar to 5D",
    "onnx",
    "PASS",
)
